<resources>
    <string name="app_name">YiBo</string>
    <string name="app_image_viewer">YiBo Image Viewer</string>
    <string name="copyright">© 2012-2013 S make apk.</string>
    <string name="title_home_page">%1$s\@%1$s</string>
    <string name="title_accounts">Accounts</string>
    <string name="title_add_account">New Account</string>
	<string name="title_passport">Passport</string>
	<string name="title_my_home">My Home</string>
	<string name="title_metions">\@Metions</string>
	<string name="title_direct_messages">Messages</string>
	<string name="title_micro_blog">Micro Blog</string>
	<string name="title_tweet">Tweet</string>
	<string name="title_retweet">Retweet</string>
	<string name="title_comment">Comment</string>
	<string name="title_mention">\@me</string>
    <string name="title_direct_message">Direct msg</string>
	<string name="title_image_viewer">View Image</string>
	<string name="title_favorites">Favorites</string>
	<string name="title_public_timeline">Public Timeline</string>
	<string name="title_search">Search</string>
	<string name="title_hot_topics">Hot Topics</string>
    <string name="title_hot_retweets">Hot Retweet</string>
    <string name="title_topic_statues">Topic:%1$s</string>
    <string name="title_hot_comments">Hot Comment</string>
    <string name="title_tab_profile">My profile</string>
    <string name="title_tab_app">Application</string>
    <string name="title_tab_more">More</string>
	<string name="btn_back">Back</string>
	<string name="btn_home">Home</string>
	<string name="btn_save">Save</string>
	<string name="btn_delete">Delete</string>
	<string name="label_loading">Loading...</string>
	<string name="label_ongoing">Running in background</string>
	<string name="title_dialog_alert">Alert</string>
	<string name="btn_confirm">Confirm</string>
	<string name="btn_cancel">Cancel</string>
	<string name="btn_close">Close</string>
	<string name="btn_form_submit">Submit</string>
	<string name="btn_form_reset">Reset</string>
	<string name="btn_daemon">Run in background</string>
    <string name="label_more">More</string>
	<string name="label_no_more">No More</string>
    <string name="btn_loading">Loading</string>
    <string name="msg_no_divider_data">There is no more tweets in divider</string>
	<string name="menu_accounts">Accounts</string>
	<string name="menu_settings">Setting</string>
	<string name="menu_back2top">Top</string>
	<string name="menu_search">Search</string>
	<string name="menu_about">About</string>
	<string name="menu_fullscreen">Full Screen</string>
	<string name="menu_not_fullscreen">Not Full Screen</string>
	<string name="menu_quit">Quit</string>
    <string name="label_app_search">Search</string>
    <string name="label_app_daily">News</string>
    <string name="label_app_image">Images</string>
    <string name="label_app_hot_retweet">Hot Rt</string>
    <string name="label_app_hot_comment">Hot Cmt</string>
    <string name="label_app_hot_topic">Hot topic</string>
    <string name="label_app_public_timeline">Casual look</string>
    <string name="label_app_jokes">Jokes</string>
    <string name="label_app_zuizipai">Self-Photo</string>
    <string name="label_app_exchange">Quality applications</string>
    <string name="title_dialog_about">About</string>
    <string name="msg_refresh_direct_message">%1$d new messages, $2$d sended message!</string>
    <string name="msg_refresh_comment">%1$d new comments!</string>
    <string name="msg_refresh_metion">%1$d new metions!</string>
    <string name="msg_refresh_frends_timeline">%1$d new tweets!</string>
    <string name="msg_quit">Are you sure to quit?</string>
    <string name="msg_latest_data">You have got the latest updates!</string>
    <string name="msg_update_conflict">Being updated, please wait...</string>
    <string name="msg_myhome_ticker_text">Got new tweets..</string>
    <string name="msg_myhome_content_title">[%1$s]%2$d new tweets</string>
    <string name="msg_myhome_content_text_1">%1$s update tweet</string>
    <string name="msg_myhome_content_text_2">%1$s、%2$s update tweets</string>
    <string name="msg_myhome_content_text_3">%1$s、%2$s、%3$s update tweets</string>
    <string name="msg_metions_ticker_text">Got new metions..</string>
    <string name="msg_metions_content_title">[%1$s]%2$d new metions</string>
    <string name="msg_metions_content_text_1">%1$s update metion</string>
	<string name="label_accounts_add_as_default">Make this my default account</string>
	<string name="label_accounts_add_use_custom_key">Use Custom AppKey</string>
	<string name="label_accounts_add_follow_official">Follow official account</string>
	<string name="hint_accounts_auth_basic_username">Username</string>
	<string name="hint_accounts_auth_basic_password">Password</string>
	<string name="hint_accounts_oauth_intro">We do not store your password , it is only used to get OAuth authentication information. OAuth is more secure than basic authentication method. </string>
    <string name="label_accounts_add_use_proxy">Use API Proxy</string>
    <string name="hint_accounts_add_proxy_rest">API Proxy Url</string>
    <string name="hint_accounts_add_proxy_search">http://search.example.com/</string>
    <string name="hint_sp_prompt">Select one service provider</string>
    <string name="btn_accounts_authorize">Start Authorization</string>
	<string name="hint_passport_login_username">Username</string>
	<string name="hint_passport_login_password">Password</string>
	<string name="hint_passport_password_confirmed">Password again</string>
	<string name="hint_passport_email">Email</string>
	<string name="hint_add_config_app_name">app name</string>
	<string name="hint_add_config_app_key">app key</string>
	<string name="hint_add_config_app_secret">app secret</string>
	<string name="hint_add_config_callback_url">callback url</string>
	<string name="label_setting_catalog_updates">Updates Settings</string>
	<string name="label_setting_catalog_display">Look &amp; Feel Settings</string>
	<string name="label_setting_catalog_compose">Compose Settings</string>
	<string name="label_setting_catalog_other">Other Settings</string>
	<string name="label_setting_catalog_cache">Cache</string>
	<string name="label_setting_catalog_version">Version Check</string>
	<string name="label_setting_catalog_ringtone">Ringtone</string>
	<string name="label_setting_updates_ringtone">Ringtone</string>
	<string name="label_setting_general_locale">Language</string>
	<string name="hint_setting_general_locale">switch language</string>
	<string name="title_dialog_setting_locale">Language</string>
	<string name="label_setting_general_font_size">Font size</string>
	<string name="hint_setting_general_font_size">Set the font size of text displayed</string>
	<string name="title_dialog_setting_font_size">Select Font size</string>
	<string name="label_setting_general_show_head">Display Avatars</string>
	<string name="hint_setting_general_show_head">Cancellation can save traffic</string>
	<string name="label_setting_general_show_thumbnail">Display thumbnails</string>
	<string name="hint_setting_general_show_thumbnail">Cancellation can save traffic</string>
	<string name="title_setting_general_show_thumbnail">Display thumbnails</string>
	<string name="label_setting_general_image_download_quality">Download Image Quality</string>
	<string name="hint_setting_general_image_download_quality">Lower quality save your network traffic</string>
	<string name="label_setting_general_load_more">Load More Automatically</string>
	<string name="hint_setting_general_load_more">Load more tweets automatically</string>
	<string name="label_setting_detect_image_info">Image Flow Control</string>
    <string name="hint_setting_detect_image_info">When the Image-size over 100K broad or gif animation, for display to remind</string>
	<string name="label_setting_auto_load_comments">Load Comments automatically</string>
    <string name="hint_setting_auto_load_comments">Load Comments when enter Tweets detail</string>
    <string name="title_dialog_setting_auto_load_comments">Load Comments</string>
	<string name="label_setting_general_sync_to_all">Sync to All Accounts by Default</string>
	<string name="hint_setting_general_sync_to_all">Sync to all accounts as default on tweet edit page.</string>
	<string name="label_setting_general_image_upload_quality">Post Image Quality</string>
	<string name="hint_setting_general_image_upload_quality">Lower quality save your network traffic.</string>
    <string name="title_dialog_setting_image_quality">Image Quality</string>
	<string name="label_setting_general_add_geo">Add Geolocation automatically</string>
	<string name="hint_setting_general_add_geo">Annotate your tweets and photos with location information.</string>
	<string name="label_setting_others_refresh_on_first_enter">Refresh on First Enter</string>
	<string name="hint_setting_others_refresh_on_first_enter">Refresh home page tweets list when enter an account first time.</string>
	<string name="label_setting_others_enable_gesture">Enable Gesture</string>
	<string name="hint_setting_others_enable_gesture">Enable gesture operation for account switch and go back.</string>
	<string name="title_setting_others_exit_on_back">Exit when press Back key on home page</string>
	<string name="hint_setting_others_exit_on_back">Exit rather than run in background when Press Back key on home page</string>
	<string name="label_setting_others_refresh_on_shake">Refresh on Shake</string>
	<string name="hint_setting_others_refresh_on_shake">Shake your phone to trigger an update</string>
	<string name="label_setting_others_image_path">Image Folder</string>
	<string name="hint_setting_others_image_path">Set the folder path to save images</string>
	<string name="label_setting_others_cache_strategy">Cache Strategy</string>
	<string name="hint_setting_others_cache_strategy">Set cache strategy for the statuses in home page.</string>
	<string name="label_setting_others_clear_cache">Clear Data Cache</string>
	<string name="hint_setting_others_clear_cache">Clear Tweet history.</string>
	<string name="label_setting_others_clear_image_cache">Clear Image Cache</string>
	<string name="hint_setting_others_clear_image_cache">Clear image cache for head and picture</string>
	<string name="title_setting_others_version_update">Check New Version On Startup</string>
    <string name="hint_setting_others_screen_orientation">Detects the direction and rotating the screen automatically.</string>
    <string name="label_setting_others_screen_orientation">Auto rotating screen</string>
    <string name="hint_setting_others_use_slider">You can drag slider in list view to do quick scroll if slider enabled.</string>
    <string name="label_setting_others_use_slider">Enable Slider in List View</string>
	<string name="label_setting_enable_updates">Background Updates</string>
	<string name="label_setting_show_status_icon">Show status icon</string>
    <string name="hint_setting_show_status_icon">Program displays a status icon running in the background, quickly and easily open SheJiaoMao</string>
	<string name="label_setting_update_interval">Update Interval</string>
	<string name="title_dialog_setting_update_interval">Update Interval</string>
	<string name="hint_setting_update_interval">Longer update intervals save your battery.</string>
	<string name="label_setting_check_for">Check For</string>
	<string name="hint_setting_check_for">Set background update check point, including Tweets Mentions Comments and Direct Messages.</string>
	<string name="label_setting_general_update_count">Update Count</string>
	<string name="hint_setting_general_update_count">Set the default loading count of each update check point.</string>
    <string name="title_setting_general_update_count">Update Count</string>
	<string name="label_setting_notification">Notifications</string>
	<string name="hint_setting_notification">Set Notifications Method</string>
	<string name="label_setting_about">About SheJiaoMao</string>
</resources>