<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llRoot"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    style="@style/panel_background" 
    android:orientation="vertical">

    <include layout="@layout/include_secondary_header_base" />
	
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1"
		android:fillViewport="true" >
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:orientation="vertical"
			android:padding="8dp">
			<EditText
				android:id="@+id/etAppName"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="4dp"
				android:layout_marginBottom="4dp"
				android:hint="@string/hint_add_config_app_name"
				android:singleLine="true"
				android:inputType="textShortMessage" 
				android:textSize="18sp"
				style="@style/edittext" />
			<EditText
				android:id="@+id/etAppKey"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="4dp"
				android:layout_marginBottom="4dp"
				android:hint="@string/hint_add_config_app_key"
				android:singleLine="true"
				android:inputType="textShortMessage" 
				android:textSize="18sp"
				style="@style/edittext" />
			<EditText
				android:id="@+id/etAppSecret"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="4dp"
				android:layout_marginBottom="4dp"				
				android:hint="@string/hint_add_config_app_secret"
				android:singleLine="true"
				android:inputType="textShortMessage"
				android:textSize="18sp"
				style="@style/edittext" />
			<EditText
				android:id="@+id/etCallbackUrl"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="4dp"
				android:layout_marginBottom="4dp"				
				android:hint="@string/hint_add_config_callback_url"
				android:singleLine="true"
				android:inputType="textUri"
				android:visibility="gone"
				android:textSize="18sp"
				style="@style/edittext" />
		</LinearLayout>
	</ScrollView>

	<LinearLayout
	    android:id="@+id/llFooterAction"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:padding="8dp"
		android:gravity="center"
		android:orientation="horizontal"
		android:background="@drawable/bg_footer_action">

		<Button
			android:id="@+id/btnFooterActionSubmit"
			android:text="@string/btn_form_submit"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginRight="4dp"
			style="@style/btn_action_positive"
			android:enabled="false" />

		<Button
			android:id="@+id/btnFooterActionReset"
			android:text="@string/btn_form_reset"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginLeft="4dp"
			style="@style/btn_action_negative" />
	</LinearLayout>

</LinearLayout>
