<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llRoot"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    style="@style/panel_background" 
    android:orientation="vertical">

    <include layout="@layout/include_secondary_header_base" />

    <include layout="@layout/include_tab_header" />
	
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1"
		android:fillViewport="true" >
		<LinearLayout
			android:id="@+id/llPassportLoginForm"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:orientation="vertical"
			android:padding="8dp" >
			<EditText
				android:id="@+id/etPassportUsername"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="4dp"
				android:layout_marginBottom="4dp"
				android:hint="@string/hint_passport_login_username"
				android:maxLength="20"
				android:singleLine="true"
				android:inputType="textShortMessage" 
				android:textSize="18sp"
				style="@style/edittext" />
			<EditText
				android:id="@+id/etPassportPassword"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="4dp"
				android:layout_marginBottom="4dp"
				android:hint="@string/hint_passport_login_password"
				android:maxLength="16"
				android:singleLine="true"
				android:password="true"
				android:inputType="textPassword" 
				android:textSize="18sp"
				style="@style/edittext" />
			<EditText
				android:id="@+id/etPassportPasswordConfirmed"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="4dp"
				android:layout_marginBottom="4dp"				
				android:hint="@string/hint_passport_password_confirmed"
				android:singleLine="true"
				android:password="true"
				android:inputType="textPassword"
				android:visibility="gone"
				android:textSize="18sp"
				style="@style/edittext" />
			<EditText
				android:id="@+id/etPassportEmail"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="4dp"
				android:layout_marginBottom="4dp"				
				android:hint="@string/hint_passport_email"
				android:singleLine="true"
				android:inputType="textEmailAddress"
				android:visibility="gone"
				android:textSize="18sp"
				style="@style/edittext" />
		</LinearLayout>
	</ScrollView>

	<LinearLayout
	    android:id="@+id/llFooterAction"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:padding="8dp"
		android:gravity="center"
		android:orientation="horizontal"
		android:background="@drawable/bg_footer_action">

		<Button
			android:id="@+id/btnPassportFormSubmit"
			android:text="@string/btn_form_submit"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginRight="4dp"
			style="@style/btn_action_positive"
			android:enabled="false" />

		<Button
			android:id="@+id/btnPassportFormReset"
			android:text="@string/btn_form_reset"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginLeft="4dp"
			style="@style/btn_action_negative" />
	</LinearLayout>

</LinearLayout>
